--- a/nodejs/www/webmap.html
+++ b/nodejs/www/webmap.html
@@ -9,19 +9,51 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <link rel="stylesheet" href="https://unpkg.com/@geoman-io/leaflet-geoman-free@latest/dist/leaflet-geoman.css" />
+    <link rel="stylesheet" href="./bootstrap.min.css">
     <link rel="stylesheet" href="map.css">
 </head>
 
 <body>
 
     <div id="map"></div>
-    <!-- Make sure you put this AFTER Leaflet's CSS -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-    <script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.72.0/src/L.Control.Locate.min.js"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://unpkg.com/@geoman-io/leaflet-geoman-free@latest/dist/leaflet-geoman.js"></script>
-    <script src="map.js"></script>
+    <div class="info-box">
+        <div>
+            <label for="mapClick">ค่าพิกัดละติจูด ลองจิจูด</label>
+            <input type="text" class="form-control" id="mapClick">
+        </div>
+        <div>
+            <label for="mapZoom">Zoom Level</label>
+            <input type="text" class="form-control" id="mapZoom">
+        </div>
+        <!-- <div>
+            <label for="mapCenter">Center</label>
+            <input type="text" class="form-control" id="mapCenter">
+        </div>
+        <div>
+            <label for="markerDrop">Marker Position</label>
+            <input type="text" class="form-control" id="markerDrop">
+        </div> -->
+
+
+
+
+
+    </div>
+
+
+
 </body>
+<!-- Make sure you put this AFTER Leaflet's CSS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+<script src="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol@0.72.0/src/L.Control.Locate.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="https://unpkg.com/@geoman-io/leaflet-geoman-free@latest/dist/leaflet-geoman.js"></script>
+<script src="./polygon.js"></script>
+<script src="map.js"></script>
 
 </html>
