--- a/nodejs/www/index.html
+++ b/nodejs/www/index.html
@@ -19,11 +19,10 @@
 </head>
 
 <body>
-    <div id="map"></div>
 
     <section class="header">
         <nav>
-            <a href="Triyakul.html"><img src="image/logo2-1.png"></a>
+            <a href="index.html"><img src="image/logo2-1.png"></a>
             <div class="nav-link">
                 <ul>
                     <li><a href="">HOME</a></li>
@@ -36,7 +35,7 @@
 
         <div class="text-box">
             <h1>Roof Material Segment</h1>
-            <p>โมเดลวิเคราะห์การสะท้อนพลังงานจากวัสดุมุงหลังคาประเภทต่างๆ โดยใช้เทคโนโลยีการเรียนรู้เชิงลึก Deep
+            <p>โมเดลการจำแนกประเภทวัสดุหลังคาและวิเคราะห์การสะท้อนพลังงาน โดยใช้เทคโนโลยีการเรียนรู้เชิงลึก Deep
                 Learning บนภาพดาวเทียมรายละเอียดสูง</p>
 
             <div class="frame">
@@ -52,38 +51,43 @@
     <!--Course-->
     <section class="course">
         <h1>Explore Our Model</h1>
-
+        <h2>การใช้งานเบื้องต้น</h2>
 
         <div class="row">
             <div class="course-col">
-                <img src="rooftest1.png">
-                <h3>ลำดับที่ 1 </h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit iste voluptatem magni optio facilis
-                    assumenda nesciunt totam alias nemo eveniet hic non minus aliquam, quam modi minima est omnis
-                    quaerat.
+                <video width="100%" height="auto" autoplay loop muted>
+                    <source src="web.mp4" type="video/mp4">
+
+                </video>
+                <h3>ขั้นตอนที่ 1 </h3>
+                <p>กดปุ่ม EXPLORE เพื่อเริ่มต้นใช้งานโมเดล
                 </p>
             </div>
             <div class="course-col">
-                <img src="rooftest1.png">
-                <h3>ลำดับที่ 2 </h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit iste voluptatem magni optio facilis
-                    assumenda nesciunt totam alias nemo eveniet hic non minus aliquam, quam modi minima est omnis
-                    quaerat.
+                <video width="100%" height="auto" autoplay loop muted>
+                    <source src="web2.mp4" type="video/mp4">
+
+                </video>
+                <h3>ขั้นตอนที่ 2 </h3>
+                <p>ให้ผู้ใช้เลือกเครื่องมือ Draw Rectangle เพื่อนำมาวาดรูปสี่เหลี่ยมปิด (Polygon) จากนั้นรอการประมวลผล
                 </p>
             </div>
             <div class="course-col">
-                <img src="rooftest1.png">
-                <h3>ลำดับที่ 3 </h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit iste voluptatem magni optio facilis
-                    assumenda nesciunt totam alias nemo eveniet hic non minus aliquam, quam modi minima est omnis
-                    quaerat.
+                <img src="result.jpg">
+
+                <h3>ขั้นตอนที่ 3 </h3>
+                <p>ผู้ใช้จะได้ผลลัพธ์จากการจำแนกประเภทวัสดุหลังคาพร้อมทั้งจำนวนหลังคาแต่ละประเภท
+                    โดยจะแสดงอยู่ตำแหน่งด้านขวาของจอ
                 </p>
             </div>
         </div>
+        <div class="foot">
+            <p>!!คำแนะนำจากผู้พัฒนา!! เพื่อให้ได้ข้อมูลที่มีความแม่นยำและใช้เวลาประมวลผลที่รวดเร็วและมีประสิทธิภาพ
+                ควรใช้ระดับการซูมอยู่ที่ 18
+            </p>
+        </div>
 
     </section>
-
-
 
 
 </body>
