--- a/nodejs/www/index.html
+++ b/nodejs/www/index.html
@@ -128,7 +128,9 @@
                             </ul>
                             <h1 class="card-title pricing-card-title">ขนาดกรอบการวาด </h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li>เพื่อให้ได้ข้อมูลที่มีความแม่นยำและใช้เวลาประมวลผลที่รวดเร็วและมีประสิทธิภาพ</li>
+                                <li>ควรวาดในลักษณะ 4 ช่องกริดแบบจัตุรัส <br>
+                                    จะทำให้ได้ข้อมูลที่มีความครอบคลุมและถูกต้อง <br>
+                                    รวมถึงใช้ระยะเวลาในการประมวลน้อย</li>
                             </ul>
                         </div>
                     </div>
