--- a/nodejs/www/webmap.html
+++ b/nodejs/www/webmap.html
@@ -16,6 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.grid/dist/Leaflet.Grid.css" />
     <link rel="stylesheet" href="./bootstrap.min.css">
     <link rel="stylesheet" href="map.css">
 </head>
@@ -124,6 +125,7 @@
 <script src="https://unpkg.com/@geoman-io/leaflet-geoman-free@latest/dist/leaflet-geoman.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@turf/turf@7/turf.min.js"></script>
 <script src="https://unpkg.com/leaflet.gridlayer.googlemutant/leaflet.gridlayer.googlemutant.js"></script>
+<script src="https://unpkg.com/leaflet.grid/dist/Leaflet.Grid.js"></script>
 <script src="./polygon.js"></script>
 <script src="map.js"></script>
 
